# LiteThinking-Inventory

./: .gitignore  CODIGO_COMPLETO.txt  README.md  docker-compose.yml  pit.py  proyecto_completo.txt
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  entrypoint.sh  pytest.ini  requirements.txt
backend/config/: settings.py  urls.py
backend/core/: adapters.py  admin.py  ai.py  di.py  models.py  permissions.py  reports.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/core/management/commands/: seed_db.py
backend/core/migrations/: 0001_initial.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
core-domain/: README.md  pyproject.toml
core-domain/core_domain/: exceptions.py
core-domain/core_domain/entities/: __init__.py  empresa.py  producto.py
core-domain/core_domain/ports/: repositories.py
core-domain/core_domain/use_cases/: empresa_use_cases.py  producto_use_cases.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: login.cy.ts  test.cy.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/atoms/: Button.tsx  ConfirmModal.tsx  EmailModal.tsx  SEO.tsx  (+4 more)
frontend/src/context/: AuthContext.tsx  ToastContext.tsx
frontend/src/pages/: Dashboard.tsx  InventoryPage.tsx  Login.tsx  NotFound.tsx  Register.tsx
frontend/src/services/: api.ts  authService.ts  empresaService.ts  productoService.ts
frontend/src/utils/: apiErrors.ts  excelParser.ts
(+12 files in other folders)
