[project]
name = "core-domain"
version = "0.1.0"
description = "Reglas de negocio y entidades"
authors = [
    {name = "kevinlozanob",email = "kevin.lozano-b@uniminuto.edu.co"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
